.6.0.4
- Updated to PHP 8.5.

6.0.3
- Change: Deprecated the Smokey Grey recursion special handling.
  Not sure why it was there in the first place.
- Bugfix: Removed the last deprecation in the unit tests.
- Bugfix: Do not clutter up the output by analysing internal
  callables in the string analysis.
- Bugfix: Closed ressources are not recognised as a ressource
  by the resource analysis.

6.0.2
- Added support for the \GdImage analysis.
- Bugfix: Do not trigger PropertyHooks, LazyProxies und LazyGhosts
  when analysing properties.
- Bugfix: Do not add double entries to the hidden properties list.
- Bugfix: The backtrace analysis is using the right color for
  strings again.
- Bugfix: Do not withhold empty metadata.

6.0.1
- Added support for Emun default values.
- Added flattened attribute analysis.
- Change: Moved the comment retrieval class in the properties
  iterator to the class variables.

6.0.0
- Added class meta analysis for class names in strings.
- Added a hint to the 'unknown' getter analysis result.
- Added container handling to the getter analysis.
- Added a unit of measurement to the benchmarking.
- Added better readability to the exception analysis.
- Added delegate handling to the getter analysis.
- Added the declaration place to the getter analysis.
- Added error info when analysing an XML string.
- Change: The scalar analysis classes are now reused.
- Change: Renamed the language fallback key from 'text' to 'en'.
- Change: Dropped PHP 7.2 and 7.3 support.
- Change: Removed deprecated code.
- Change: Use json_validate() if available to determine if a
  string is a json string.
- Change: Simplified the routing process.
- Change: Removed some literals.
- Change: Some deprecations.
- Change: Only use byRef when absolutely necessary.
- Change: We do not filter the file path anymore.
- Change: Moved some frontend literals to the translations.
- Change: Split the getter analysis into several smaller classes.