@@ -135,6 +135,7 @@ metaRessourceAnalysis = "Ressource analysis"
 metaConstants = "Constants"
 metaUnformattedFloat = "Unformatted float value"
 metaReflection = "Reflection"
+metaTypeHint = "Type hint"
 
 publicConstant = "Public constant "
 protectedConstant = "Protected constant "
@@ -355,6 +356,7 @@ metaRessourceAnalysis = "Ressourcen Analyse"
 metaConstants = "Konstanten"
 metaUnformattedFloat = "Unformatierter Float Wert"
 metaReflection = "Reflection"
+metaTypeHint = "Type Hint"
 
 publicConstant = "Public Konstante "
 protectedConstant = "Protected Konstante "
