@@ -270,7 +270,7 @@
   width: 150px;
 }
 .kwrapper .knode.kadditional table td.kdesc, .kfatalwrapper-outer .knode.kadditional table td.kdesc {
-  max-width: 50px;
+  max-width: 1000px;
   word-wrap: break-word;
 }
 .kwrapper .knode.kpayload, .kfatalwrapper-outer .knode.kpayload {
